@@ -174,6 +174,7 @@ Version 1.5
  - Add Fakro ZWRS Roller Shutter FLiRS module
  - Add Homeseer HS-WS100+ Wall Switch
  - Add alias for FGPB101 Button
+ - Add Aeotec ZW129 WallMote Duo (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
